Generate HTML and feed files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "~16.0.1",
+    "feed": "~4.2.2",
+    "marked": "~4.0.16",
     "snoowrap": "~1.23.0"
   }
 }
